...
    <string name="app_name">Bilingual Reader</string>

    <string name="action_confirm">Confirm</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_return">Return</string>
    <string name="action_positive">Yes</string>
    <string name="action_negative">No</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copied: %s</string>
    <string name="action_app_not_installed">Required App is not installed</string>
    <string name="action_scroll_up">Up</string>
    <string name="action_scroll_down">Down</string>
    <string name="action_disconnect">Disconnect</string>
...
    <string name="config_book_tts_voice_japanese">Voice japanese</string>

    <!-- CONFIG LIBRARIES -->
    <string name="menu_libraries_delete_library">Delete Library</string>

    <string name="config_libraries_title_libraries">Libraries</string>
    <string name="config_libraries_add_library">Add Library</string>
    <string name="config_libraries_delete_library">Delete Library</string>
    <string name="config_libraries_confirm_delete_library">Library</string>

    <string name="config_libraries_title_library">Library title</string>
    <string name="config_libraries_title_language">Library language</string>
    <string name="config_libraries_title_path">Library folder</string>

    <string name="config_libraries_title_library_required">Title required</string>
    <string name="config_libraries_title_path_required">Folder required</string>
    <string name="config_libraries_title_path_default">The folder has already been set as the default</string>

    <!-- UPDATE POPUP TITLES -->
    <string name="popup_update_title">Update App</string>
    <string name="popup_update_description">Downloading…</string>
...
    <!-- VOCABULARY -->
    <string name="vocabulary_manga">Manga</string>
    <string name="vocabulary_book">Book</string>
    <string name="vocabulary_find">Vocabulary</string>
    <string name="vocabulary_favorites">Favorites</string>
    <string name="vocabulary_appear">Frequency: %d</string>
    <string name="vocabulary_favorite">Favorite</string>
    <string name="vocabulary_manga_favorite">Favorite</string>
    <string name="vocabulary_book_favorite">Favorite</string>
    <string name="vocabulary_manga_button">Manga</string>
    <string name="vocabulary_book_button">Book</string>
    <string name="vocabulary_tatoeba_button">Tatoeba</string>

...
        <item>Default</item>
        <item>All files</item>
        <item>Only new files</item>
        <item>Reimport files</item>
    </string-array>

    <string name="menu_vocabulary_search">Search</string>
    <string name="menu_vocabulary_order">Order</string>
    <string name="menu_vocabulary_favorite">Favorite</string>

    <string name="popup_vocabulary_tab_item_ordering">Ordenação</string>

    <string name="popup_vocabulary_order_description">For description</string>
    <string name="popup_vocabulary_order_favorite">For favorite</string>
    <string name="popup_vocabulary_order_frequency">For frequency</string>

    <string name="popup_vocabulary_jlpt"><b><i>jlpt:</i></b> N%d</string>
...
