<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_config_libraries"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.menu.ConfigLibrariesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin_bottom">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_config_library_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:minHeight="500dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/config_library_toolbar"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/config_library_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:contentDescription="@string/config_libraries_add_library"
            app:srcCompat="@drawable/ico_add_library"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/config_library_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:background="@color/transparent"
            android:theme="@style/MainToolbarContentTheme.NoElevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_configuration_libraries"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_navigator_header_size"
                android:gravity="start|center"
                app:popupTheme="@style/MainToolbarStyle"
                style="@style/MainToolbarThemeWithShadow">

                <TextView
                    android:id="@+id/config_libraries_title"
                    style="@style/ConfigLibrariesToolbarTheme"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_gravity="top|center"
                    android:gravity="center"
                    android:text="@string/config_libraries_title_libraries"
                    android:textSize="@dimen/title_size"/>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>