<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_vocabulary_search"
        android:icon="@drawable/ico_search"
        android:orderInCategory="100"
        android:title="@string/menu_vocabulary_search"
        android:visible="true"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item android:id="@+id/menu_vocabulary_list_order"
        android:title="@string/menu_vocabulary_order"
        android:icon="@drawable/ico_animated_sort_to_desc_name"
        android:orderInCategory="101"
        app:showAsAction="always"/>

    <item android:id="@+id/menu_vocabulary_favorite"
        android:title="@string/menu_vocabulary_favorite"
        android:icon="@drawable/ico_favorite_unmark"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="102"
        app:showAsAction="always"/>
</menu>