...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:maxImageSize="@dimen/vocabulary_down_image_width" />

        <FrameLayout
            android:id="@+id/vocabulary_popup_menu_order_filter"
            style="@style/AppBackground.PopupBottom"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="1dp"
...
